arc/vm/libvda/rust/src/bindings.rs

pub type __clock_t = ::std::os::raw::c_long;
pub type __rlim_t = ::std::os::raw::c_ulong;
pub type __rlim64_t = ::std::os::raw::c_ulong;
pub type __id_t = ::std::os::raw::c_uint;
pub type __time_t = ::std::os::raw::c_long;
pub type __useconds_t = ::std::os::raw::c_uint;
pub type __suseconds_t = ::std::os::raw::c_long;
pub type __daddr_t = ::std::os::raw::c_int;
pub type __key_t = ::std::os::raw::c_int;
pub type __clockid_t = ::std::os::raw::c_int;
pub type __timer_t = *mut ::std::os::raw::c_void;
pub type __blksize_t = ::std::os::raw::c_long;
pub type __blkcnt_t = ::std::os::raw::c_long;
pub type __blkcnt64_t = ::std::os::raw::c_long;
pub type __fsblkcnt_t = ::std::os::raw::c_ulong;
pub type __fsblkcnt64_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt64_t = ::std::os::raw::c_ulong;
pub type __fsword_t = ::std::os::raw::c_long;
pub type __ssize_t = ::std::os::raw::c_long;
pub type __syscall_slong_t = ::std::os::raw::c_long;
pub type __syscall_ulong_t = ::std::os::raw::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::std::os::raw::c_char;
pub type __intptr_t = ::std::os::raw::c_long;
pub type __socklen_t = ::std::os::raw::c_uint;
pub type __sig_atomic_t = ::std::os::raw::c_int;
pub type int_least8_t = ::std::os::raw::c_schar;
pub type int_least16_t = ::std::os::raw::c_short;
pub type int_least32_t = ::std::os::raw::c_int;
pub type int_least64_t = ::std::os::raw::c_long;
pub type uint_least8_t = ::std::os::raw::c_uchar;
pub type uint_least16_t = ::std::os::raw::c_ushort;
pub type uint_least32_t = ::std::os::raw::c_uint;
pub type uint_least64_t = ::std::os::raw::c_ulong;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_long;
pub type int_fast32_t = ::std::os::raw::c_long;
pub type int_fast64_t = ::std::os::raw::c_long;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_ulong;
pub type uint_fast32_t = ::std::os::raw::c_ulong;
pub type uint_fast64_t = ::std::os::raw::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub const vda_impl_type_FAKE: vda_impl_type = 0;
pub const vda_impl_type_GAVDA: vda_impl_type = 1;
pub type vda_impl_type = u32;
pub use self::vda_impl_type as vda_impl_type_t;
pub const vda_result_SUCCESS: vda_result = 0;
pub const vda_result_ILLEGAL_STATE: vda_result = 1;
pub const vda_result_INVALID_ARGUMENT: vda_result = 2;
pub const vda_result_UNREADABLE_INPUT: vda_result = 3;
pub const vda_result_PLATFORM_FAILURE: vda_result = 4;
pub const vda_result_INSUFFICIENT_RESOURCES: vda_result = 5;
pub const vda_result_CANCELLED: vda_result = 6;
pub type vda_result = u32;
pub use self::vda_result as vda_result_t;
pub const vda_profile_VIDEO_CODEC_PROFILE_UNKNOWN: vda_profile = -1;
pub const vda_profile_VIDEO_CODEC_PROFILE_MIN: vda_profile = -1;
pub const vda_profile_H264PROFILE_MIN: vda_profile = 0;
pub const vda_profile_H264PROFILE_BASELINE: vda_profile = 0;
pub const vda_profile_H264PROFILE_MAIN: vda_profile = 1;
pub const vda_profile_H264PROFILE_EXTENDED: vda_profile = 2;
pub const vda_profile_H264PROFILE_HIGH: vda_profile = 3;
pub const vda_profile_H264PROFILE_HIGH10PROFILE: vda_profile = 4;
pub const vda_profile_H264PROFILE_HIGH422PROFILE: vda_profile = 5;
pub const vda_profile_H264PROFILE_HIGH444PREDICTIVEPROFILE: vda_profile = 6;
pub const vda_profile_H264PROFILE_SCALABLEBASELINE: vda_profile = 7;
pub const vda_profile_H264PROFILE_SCALABLEHIGH: vda_profile = 8;
pub const vda_profile_H264PROFILE_STEREOHIGH: vda_profile = 9;
pub const vda_profile_H264PROFILE_MULTIVIEWHIGH: vda_profile = 10;
pub const vda_profile_H264PROFILE_MAX: vda_profile = 10;
pub const vda_profile_VP8PROFILE_MIN: vda_profile = 11;
pub const vda_profile_VP8PROFILE_ANY: vda_profile = 11;
pub const vda_profile_VP8PROFILE_MAX: vda_profile = 11;
pub const vda_profile_VP9PROFILE_MIN: vda_profile = 12;
pub const vda_profile_VP9PROFILE_PROFILE0: vda_profile = 12;
pub const vda_profile_VP9PROFILE_PROFILE1: vda_profile = 13;
pub const vda_profile_VP9PROFILE_PROFILE2: vda_profile = 14;
pub const vda_profile_VP9PROFILE_PROFILE3: vda_profile = 15;
pub const vda_profile_VP9PROFILE_MAX: vda_profile = 15;
pub const vda_profile_HEVCPROFILE_MIN: vda_profile = 16;
pub const vda_profile_HEVCPROFILE_MAIN: vda_profile = 16;
pub const vda_profile_HEVCPROFILE_MAIN10: vda_profile = 17;
pub const vda_profile_HEVCPROFILE_MAIN_STILL_PICTURE: vda_profile = 18;
pub const vda_profile_HEVCPROFILE_MAX: vda_profile = 18;
pub const vda_profile_DOLBYVISION_MIN: vda_profile = 19;
pub const vda_profile_DOLBYVISION_PROFILE0: vda_profile = 19;
pub const vda_profile_DOLBYVISION_PROFILE4: vda_profile = 20;
pub const vda_profile_DOLBYVISION_PROFILE5: vda_profile = 21;
pub const vda_profile_DOLBYVISION_PROFILE7: vda_profile = 22;
pub const vda_profile_DOLBYVISION_MAX: vda_profile = 22;
pub const vda_profile_THEORAPROFILE_MIN: vda_profile = 23;
pub const vda_profile_THEORAPROFILE_ANY: vda_profile = 23;
pub const vda_profile_THEORAPROFILE_MAX: vda_profile = 23;
pub const vda_profile_AV1PROFILE_MIN: vda_profile = 24;
pub const vda_profile_AV1PROFILE_PROFILE_MAIN: vda_profile = 24;
pub const vda_profile_AV1PROFILE_PROFILE_HIGH: vda_profile = 25;
pub const vda_profile_AV1PROFILE_PROFILE_PRO: vda_profile = 26;
pub const vda_profile_AV1PROFILE_MAX: vda_profile = 26;
pub const vda_profile_VIDEO_CODEC_PROFILE_MAX: vda_profile = 26;
pub type vda_profile = i32;
pub use self::vda_profile as vda_profile_t;
pub const vda_pixel_format_YV12: vda_pixel_format = 0;
pub const vda_pixel_format_NV12: vda_pixel_format = 1;
pub const vda_pixel_format_PIXEL_FORMAT_MAX: vda_pixel_format = 1;
pub type vda_pixel_format = u32;
pub use self::vda_pixel_format as vda_pixel_format_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct video_frame_plane {
    pub offset: i32,
    pub stride: i32,
}
#[test]
fn bindgen_test_layout_video_frame_plane() {
    assert_eq!(
        ::std::mem::size_of::<video_frame_plane>(),
        8usize,
        concat!("Size of: ", stringify!(video_frame_plane))
    );
    assert_eq!(
        ::std::mem::align_of::<video_frame_plane>(),
        4usize,
        concat!("Alignment of ", stringify!(video_frame_plane))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<video_frame_plane>())).offset as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(video_frame_plane),
            "::",
            stringify!(offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<video_frame_plane>())).stride as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(video_frame_plane),
            "::",
            stringify!(stride)
        )
    );
}
pub type video_frame_plane_t = video_frame_plane;
pub const vda_event_type_UNKNOWN: vda_event_type = 0;
pub const vda_event_type_PROVIDE_PICTURE_BUFFERS: vda_event_type = 1;
pub const vda_event_type_PICTURE_READY: vda_event_type = 2;
pub const vda_event_type_NOTIFY_END_OF_BITSTREAM_BUFFER: vda_event_type = 3;
pub const vda_event_type_NOTIFY_ERROR: vda_event_type = 4;
pub const vda_event_type_RESET_RESPONSE: vda_event_type = 5;
pub const vda_event_type_FLUSH_RESPONSE: vda_event_type = 6;
pub type vda_event_type = u32;
pub use self::vda_event_type as vda_event_type_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct provide_picture_buffers_event_data {
    pub min_num_buffers: u32,
    pub width: i32,
    pub height: i32,
}
#[test]
fn bindgen_test_layout_provide_picture_buffers_event_data() {
    assert_eq!(
        ::std::mem::size_of::<provide_picture_buffers_event_data>(),
        12usize,
        concat!("Size of: ", stringify!(provide_picture_buffers_event_data))
    );
    assert_eq!(
        ::std::mem::align_of::<provide_picture_buffers_event_data>(),
        4usize,
        concat!(
            "Alignment of ",
            stringify!(provide_picture_buffers_event_data)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<provide_picture_buffers_event_data>())).min_num_buffers
                as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(provide_picture_buffers_event_data),
            "::",
            stringify!(min_num_buffers)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<provide_picture_buffers_event_data>())).width as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(provide_picture_buffers_event_data),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<provide_picture_buffers_event_data>())).height as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(provide_picture_buffers_event_data),
            "::",
            stringify!(height)
        )
    );
}
pub type provide_picture_buffers_event_data_t = provide_picture_buffers_event_data;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct picture_ready_event_data {
    pub picture_buffer_id: i32,
    pub bitstream_id: i32,
    pub crop_left: i32,
    pub crop_top: i32,
    pub crop_right: i32,
    pub crop_bottom: i32,
}
#[test]
fn bindgen_test_layout_picture_ready_event_data() {
    assert_eq!(
        ::std::mem::size_of::<picture_ready_event_data>(),
        24usize,
        concat!("Size of: ", stringify!(picture_ready_event_data))
    );
    assert_eq!(
        ::std::mem::align_of::<picture_ready_event_data>(),
        4usize,
        concat!("Alignment of ", stringify!(picture_ready_event_data))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<picture_ready_event_data>())).picture_buffer_id as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(picture_ready_event_data),
            "::",
            stringify!(picture_buffer_id)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<picture_ready_event_data>())).bitstream_id as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(picture_ready_event_data),
            "::",
            stringify!(bitstream_id)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<picture_ready_event_data>())).crop_left as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(picture_ready_event_data),
            "::",
            stringify!(crop_left)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<picture_ready_event_data>())).crop_top as *const _ as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(picture_ready_event_data),
            "::",
            stringify!(crop_top)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<picture_ready_event_data>())).crop_right as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(picture_ready_event_data),
            "::",
            stringify!(crop_right)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<picture_ready_event_data>())).crop_bottom as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(picture_ready_event_data),
            "::",
            stringify!(crop_bottom)
        )
    );
}
